# ebpf-sfi

./: README.md  \  cabal.project  ebpf-cfg.cabal  ebpf-sfi.cabal  sl.asm  tags  test.asm
app/: Main.hs
examples/: add.asm  jump_correct.asm  jump_oob.asm  jump_over_load.asm  store_load.asm  store_load_offset.asm  sum_five.asm
report/: .gitignore  ebpf-sfi.aux  ebpf-sfi.bbl  ebpf-sfi.blg  ebpf-sfi.fdb_latexmk  ebpf-sfi.fls  ebpf-sfi.tex  ebpf-sfi.toc  refs.bib
report/sections/: conclusion.tex  discussion.tex  implementation.tex  introduction.tex
src/: SFI.hs
test/: SFISpec.hs
