cabal-version: 3.4
tested-with: ghc ==9.6.7
name: ebpf-sfi
version: 0.1.0.0
synopsis: Ebpf SFI analysis.
homepage: https://github.com/svbrodersen/ebpf-sfi
license: MIT
license-file: LICENSE
author: Simon Vinding Brodresen
maintainer: rzn875@alumni.ku.dk
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    SFI

  build-depends:
    array,
    base >=4.14 && <5,
    containers,
    ebpf-tools ==0.2.0.0,
    ebpf-val,
    text-display,

  hs-source-dirs: src
  default-language: Haskell2010

executable ebpf-sfi
  import: warnings
  main-is: Main.hs
  build-depends:
    array,
    base >=4.14 && <5,
    containers,
    ebpf-sfi,
    ebpf-tools ==0.2.0.0,
    text,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite ebpf-sfi-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    SFISpec

  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    containers,
    ebpf-sfi,
    ebpf-tools,
    ebpf-val,
    hspec,

  build-tool-depends:
    hspec-discover:hspec-discover
